--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/zuo"]
 	path = src/zuo
 	url = git@github.com:racket/zuo.git
+[submodule "src/racket"]
+	path = src/racket
+	url = git@github.com:racket/racket.git
